correct alignment; add logo

--- a/css/base.css
+++ b/css/base.css
@@ -81,8 +81,6 @@ div#footer {
 	padding: 0px; 
 	margin: 0px;
 	border-collapse:collapse;
-	height: 100%;
-	width: 100%;
 	vertical-align: top;
 }
 
@@ -93,7 +91,6 @@ div#footer {
 #backgroundSpace {
 	background-color: white;
 	background: linear-gradient(to right, #C3C3C3, #fff);
-	width: 100%;
 	border-left: solid 1px #C3C3C3;
 }
 
